# banana-i18n-rust

./: Cargo.toml  README.md
banana-i18n/: Cargo.toml  README.md
banana-i18n-mt/: Algorithm.md  Cargo.toml  README.md  TODO.md
banana-i18n-mt-web/: .env.example  Cargo.toml  README.md
banana-i18n-mt-web/src/: main.rs
banana-i18n-mt-web/src/static/: app.js  index.html  languages.json  style.css
banana-i18n-mt/src/: error.rs  expansion.rs  google_translate.rs  integration_tests.rs  lib.rs  mock.rs  translator.rs
banana-i18n/src/: fallbacks.rs  loader.rs
i18n/: de.json  en.json  fr.json  ru.json  zh-hans.json
src/: ast.rs  lib.rs  main.rs  parser.rs
src/mt/: Algorithm.md  README.md  TODO.md  anchor.rs  data.rs  error.rs  expansion.rs  gender_expansion.rs  google_translate.rs  integration_tests.rs  mock.rs  mod.rs  placeholder_recovery.rs  plural_expansion.rs  reassembly.rs  scope_widening.rs  translator.rs
