[package]
name = "banana-i18n"
version = "0.1.0"
edition = "2024"
description = "A Rust library for internationalization (i18n) with MediaWiki-style message formatting and localization."
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
keywords = ["localization", "internationalization", "i18n", "l10n", "wikipedia"]
categories = ["localization", "text-processing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/santhoshtr/banana-i18n-rust"

[dependencies]
icu_locale = "2.1"
icu_plurals = "2.1.1"
tree-sitter = "0.26"
tree-sitter-wikitext = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
