[workspace]
resolver = "2"
members = [
    "banana-i18n",
    "banana-i18n-mt",
    "banana-i18n-mt-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
license = "MIT"
repository = "https://github.com/santhoshtr/banana-i18n-rust"
